@@ -1,0 +1,37 @@
+/* This testcase is part of GDB, the GNU debugger.
+
+   Copyright 2012 Free Software Foundation, Inc.
+
+   This program is free software; you can redistribute it and/or modify
+   it under the terms of the GNU General Public License as published by
+   the Free Software Foundation; either version 3 of the License, or
+   (at your option) any later version.
+
+   This program is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   GNU General Public License for more details.
+
+   You should have received a copy of the GNU General Public License
+   along with this program.  If not, see <http://www.gnu.org/licenses/>.  */
+
+/* This source file was generated by:
+   gcc -o gdb.reverse/singlejmp-reverse-nodebug.S gdb.reverse/singlejmp-reverse-nodebug.c -Wall -S -O2
+   */
+
+	.file	"singlejmp-reverse-nodebug.c"
+	.text
+	.p2align 4,,15
+	.globl	nodebug
+	.type	nodebug, @function
+nodebug:
+.LFB0:
+	.cfi_startproc
+	# basic block 2
+	rep
+	ret
+	.cfi_endproc
+.LFE0:
+	.size	nodebug, .-nodebug
+	.ident	"GCC: (GNU) 4.6.4 20120911 (prerelease)"
+	.section	.note.GNU-stack,"",@progbits
